2003/12/18 12:56 (-0500) rwmcfa1

	* xs/GtkWidget.xs: implementation of some functions that weren't before
	for various reasons.

	* t/01.GtkWidget.t: phase two of widget testing, will probably break for 
	some, but that's the price we must pay for thorough testing. there's 46
	tests here, there will be well over 100 before it's done

	* t/accel-group-map.t: test out some of widget's stuff that we need
	accel stuff for.

2003/12/18 12:56 (-0500) muppetman

	* gtk2perl.h: previous change #undef'd the wrong symbols, resulted in
	"macro redefined" warnings all over the place.  bad muppet, no biscuit.

2003/12/18 00:15 (-0500) muppetman

	* gtk2perl.h, maps: in versions prior to 2.3.0, GtkTreeSearchFlags was
	declared such that glib-mkenums interpreted and registered it as a
	GEnum type.  sometime before 2.3.0, this was corrected, and the type
	is registered as a GFlags.  Correct the maps file to declare this as
	GFlags (since that's correct), and mangle things with macro tricks to
	get things to work correctly with older libraries.

	* t/00.Gtk2.t: immediately after init, events_pending returns 0 on
	2.0.x and 2.2.x, but insists on returning 1 on my system.  marked
	that test as TODO for >= 2.3.0 until we figure out what's up.

2003/12/17 22:49 (-0500) muppetman

	* xs/GtkLabel.xs: use _ornull on get_mnemonic_widget to avoid warnings
	on 2.0.x.  it's perplexing that this didn't generate warnings on 2.2.4.
	also flesh out get_attributes to allow proper NULL return.

	* t/05.GtkListStore-etc.t: clarifying commentary, reminding us to remove
	the special case if the workaround for $liststore->remove changes.

2003/12/17 21:54 (-0500) rwmcfa1

	* t/05.GtkListStore-etc.t: bad bugs fixed, skips were needed, and stuff
	like that.

2003/12/16 22:44 (-0500) rwmcfa1

	* xs/GdkTypes.xs, xs/GdkWindow.xs, xs/GtkHScrollbar.xs, xs/GtkPaned.xs,
	xs/GtkRc.xs, xs/GtkTreeModel.xs, xs/GtkVScrollbar.xs, xs/GtkWidget.xs,
	xs/GtkWindow.xs: warnings fixes.

2003/12/16 21:56 (-0500) rwmcfa1
